--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <div class="block">
             <div class="block1">
                 <img src="./images/test.png" alt="test">
-                <h2>Take the assessment</h2> 
+                <h2>TAKE THE ASSESSMENT</h2> 
             </div>
             <div class="block2">
                 <img src="./images/rating.png" alt="rating">
-                <h2>See how you scored</h2> 
+                <h2>SEE HOW YOU SCORED</h2> 
             </div>
         </div>
         <div class="start_btn"><button>Start Quiz</button></div>
@@ -51,56 +51,24 @@
             <div class="title">Quiz Application</div>
             <div class="timer">
                 <div class="time_text">Time Left</div>
-                <div class="timer_sec">15</div>
+                <div class="timer_sec">10</div>
             </div>
             <div class="time_line"></div>
         </header>
         <section>
             <div class="que_text">
-                <span>What does HTML stand for?</span>
+                <!-- JavaScript -->
             </div>
             <div class="option_list">
-                <div class="option">
-                    <span>Hyper Text Preprocessor</span>
-                    <div class="icon tick"><i class="fas fa-check"></i></div>
-                </div>
-                <div class="option">
-                    <span>Hyper Text Markup Language</span>
-                    <div class="icon cross"><i class="fas fa-times"></i></div>
-                </div>
-                <div class="option">
-                    <span>Hyper Text Preprocessor</span>
-                </div>
-                <div class="option">
-                    <span>Hyper Text Preprocessor</span>
-                </div>
-            </div>
-        </section>
-        <!--
-        <section>
-            <div class="que_text">
-                <-- Here I've inserted question from JavaScript ->
-            </div>
-            <div class="option_list">
-                <!-- Here I've inserted options from JavaScript ->
+                <!-- JavaScript -->
             </div>
         </section> 
-        -->
-
-        <!-- footer of Quiz Box -->
-        <!-- 
         <footer>
             <div class="total_que">
-                <!- Here I've inserted Question Count Number from JavaScript ->
+                <!-- JavaScript -->
             </div>
-            <button class="next_btn">Next Que</button>
-        </footer> -->
-        <footer>
-            <div class="total_que">
-                <span><p>2</p>of<p>5</p>Questions</span>
-            </div>
-            <button class="next_btn">Next Que</button>
-        </footer>
+            <button class="next_btn">Next</button>
+        </footer> 
     </div>
 
     <!-- Result Box -->
@@ -108,9 +76,9 @@
         <div class="icon">
             <i class="fas fa-crown"></i>
         </div>
-        <div class="complete_text">You've completed the Quiz!</div>
+        <div class="text">You've completed the Quiz!</div>
         <div class="score_text">
-            <!-- Here I've inserted Score Result from JavaScript -->
+            <!-- JavaScript -->
         </div>
         <div class="buttons">
             <button class="restart">Replay Quiz</button>
@@ -118,8 +86,6 @@
         </div>
     </div>
 
-
-    <!-- Inside this JavaScript file I've coded all Quiz Codes -->
     <script src="script.js"></script>
 
 </body>
