--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
         <div class="block">
             <div class="block1">
                 <img src="./images/test.png" alt="test">
-                <h2>TAKE THE ASSESSMENT</h2> 
+                <h2>TAKE THE QUIZ</h2> 
             </div>
             <div class="block2">
-                <img src="./images/rating.png" alt="rating">
-                <h2>SEE HOW YOU SCORED</h2> 
+                <img src="./images/score.png" alt="rating">
+                <h2>SEE YOUR SCORE</h2> 
             </div>
-        </div>
-        <div class="start_btn"><button>Start Quiz</button></div>
+        </div> 
+        <div class="start_btn"><button>Start Quiz</button></div> 
     </div>
     
 
@@ -31,7 +31,7 @@
         <div class="info-title"><span>Some Rules of this Quiz</span></div>
         <div class="info-list">
             <ol>
-                <li>You will have only 15 seconds per each question</li>
+                <li>You will have only 10 seconds per each question</li>
                 <li>Once you select your answer, you can't reselect it</li>
                 <li>You can't select any option once time goes off</li>
                 <li>You can't exit from the quiz while you are playing</li>
@@ -54,7 +54,7 @@
                 <div class="timer_sec">10</div>
             </div>
             <div class="time_line"></div>
-        </header>
+        </header> 
         <section>
             <div class="que_text">
                 <!-- JavaScript -->
@@ -68,7 +68,7 @@
                 <!-- JavaScript -->
             </div>
             <button class="next_btn">Next</button>
-        </footer> 
+        </footer>  
     </div>
 
     <!-- Result Box -->
